# kubesecret

./: README.md  pyproject.toml
kubesecret/: cli.py
